<?xml version="1.0"?>
<package format="2">
  <name>sfc_generation</name>
  <version>0.0.0</version>
  <description>The sfc_generation package. Contains algorithms for generating safe flight corridors</description>

  <maintainer email="johntgz@nus.edu.sg">john tan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>grid_map</depend>

  <depend>jps3d</depend>

  <!-- <depend>decomp_util</depend> -->
  <depend>decomp_ros_utils</depend> 

  <depend>decomp_ros_msgs</depend>
  <depend>convex_decomp_util</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
